Version 0.10 (23.06.2016)

- Refactoring.

Version 0.9 (14.01.2016)

- Pip distribution.

Version 0.7 (12.10.2015)

- Copy generated password to clipboard when using pwd or pwgen
  commands.
- Added config item to enable/disable copying to clipboard.

Version 0.6 (07.10.2015)

- Removed migrate functionality.
- Added encrypt & decrypt commands.
- Renamed modify-command to edit-command.
- Minor refactoring.

Version 0.5 (12.09.2015)

- Bug fix: password generator did not work when adding account.

Version 0.4 (07.09.2015)

- Moved to Python3.
- Changed license to the MIT License.
- Changed name to clipwdmgr.py.
- Major refactoring.
- Added new functionality.

Version 0.3 (24.06.2015)

- Added version number and .txt extension to password file. 
- Naming: clipasswordmgr.py is the development version. 
  clipasswordmgr-VERSION.py is the release version.
- NOTE: copy/rename existing password file "clipwds" to new name
  "clipwds-0.3.txt"

Version 0.2 (12.01.2015)

- Added -c option.

Version 0.1 (04.01.2015)

- Initial version.