@@ -1,6 +1,7 @@
 Version 0.10 (23.06.2016)
 
 - Refactoring.
+- Added random user name generator.
 
 Version 0.9 (14.01.2016)
 
